Добавляет начало онлайн-чата

--- a/src/index.scss
+++ b/src/index.scss
@@ -239,12 +239,11 @@ body {
 
 .send form button {
   background: #0633ff;
-  color: #FFF;
+  color: #fff;
   border: 1px solid #838383;
   border-radius: 0 4px 4px 0;
   padding: 0 8px;
 }
-
 
 .message {
   position: absolute;
