--- a/src/index.scss
+++ b/src/index.scss
@@ -1,286 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300&display=swap');
+// abstract (fn, var, mix)
+@import 'stylesheets/abstract/functions.scss';
+@import 'stylesheets/abstract/mixins.scss';
+@import 'stylesheets/abstract/variables.scss';
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+// vendors (normalize)
+@import 'stylesheets/vendors/normalize.scss';
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-}
+//  base (link, box, font, hidden)
+@import 'stylesheets/base/base.scss';
+@import 'stylesheets/base/fonts.scss';
+@import 'stylesheets/base/helpers.scss';
 
-body {
-  min-height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-image: url(./assets/Mountains1.png);
-}
+// layout
+@import 'stylesheets/layout/grid.scss';
 
-.wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-}
+// components
+@import 'stylesheets/components/button.scss';
 
-.logo {
-  width: 620px;
-  height: 146px;
-  background-image: url(./assets/logo.png);
-  background-size: cover;
-  margin-bottom: 24px;
-}
-
-.canvas-wrap {
-  width: 616px;
-  height: 616px;
-  position: relative;
-  border-radius: 12px;
-  background: #b6b6b6;
-  padding: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Big Shoulders Stencil Display', cursive;
-  font-size: 38px;
-}
-
-.canvas-wrap canvas {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  bottom: 8px;
-  right: 8px;
-  z-index: 1;
-}
-
-.top {
-  background-image: url(./assets/border-top.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  height: 12px;
-  top: 0;
-  left: 12px;
-  right: 12px;
-  z-index: 100;
-}
-
-.bottom {
-  background-image: url(./assets/border-bottom.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  height: 12px;
-  bottom: 0;
-  left: 12px;
-  right: 12px;
-  z-index: 100;
-}
-
-.top-right {
-  background-image: url(./assets/border-top-right.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  top: 0;
-  right: 0;
-  z-index: 100;
-}
-
-.top-left {
-  background-image: url(./assets/border-top-left.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  top: 0;
-  left: 0;
-  z-index: 100;
-}
-
-.left {
-  background-image: url(./assets/border-left.png);
-  background-repeat: repeat-y;
-  position: absolute;
-  width: 12px;
-  top: 12px;
-  bottom: 12px;
-  left: 0;
-  z-index: 100;
-}
-
-.right {
-  background-image: url(./assets/border-right.png);
-  background-repeat: repeat-y;
-  position: absolute;
-  width: 12px;
-  top: 12px;
-  bottom: 12px;
-  right: 0;
-  z-index: 100;
-}
-
-.bottom-right {
-  background-image: url(./assets/border-bottom-right.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  bottom: 0;
-  right: 0;
-  z-index: 100;
-}
-
-.bottom-left {
-  background-image: url(./assets/border-bottom-left.png);
-  background-repeat: repeat-x;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-}
-
-.start-game {
-  position: absolute;
-  z-index: 99;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-  background-image: url(./assets/WorldMap.png);
-  background-position: center;
-  color: #f4f4f4;
-}
-
-.row {
-  text-align: center;
-  margin-bottom: 12px;
-}
-
-.input {
-  width: 201px;
-  height: 46px;
-  border: 4px solid #a5a5a5;
-  border-radius: 4px;
-  padding: 0 12px;
-  font-size: 24px;
-  text-align: center;
-}
-
-.btn {
-  width: 201px;
-  height: 56px;
-  background: none;
-  background-image: url(./assets/button.png);
-  cursor: pointer;
-  position: relative;
-  border: none;
-  outline: 0;
-  text-indent: -9999px;
-
-  &:hover {
-    &:before {
-      top: 59%;
-      left: -38px;
-    }
-  }
-
-  &:before {
-    content: '';
-    display: block;
-    width: 32px;
-    height: 32px;
-    background-image: url(./assets/small-pointer.png);
-    top: 60%;
-    transform: translate(0, -50%);
-    left: -40px;
-    position: absolute;
-  }
-}
-
-.chat-wrap {
-  position: relative;
-  background-color: #f4f4f4;
-  border-radius: 20px;
-  width: 616px;
-  height: 300px;
-}
-
-.send {
-  height: 28px;
-  position: absolute;
-  bottom: 8px;
-  left: 8px;
-  right: 8px;
-}
-
-.send form {
-  display: flex;
-  align-content: stretch;
-}
-
-.send form input {
-  width: 100%;
-  height: 28px;
-  font-size: 14px;
-  padding: 0 8px;
-}
-
-.send form button {
-  background: #0633ff;
-  color: #fff;
-  border: 1px solid #838383;
-  border-radius: 0 4px 4px 0;
-  padding: 0 8px;
-}
-
-.message {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  right: 8px;
-  bottom: 36px;
-  overflow-y: scroll;
-  padding: 6px 8px;
-}
-
-.online-wrapper {
-  position: sticky;
-  top: 5px;
-  left: 0;
-}
-
-.online {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  font-family: monospace;
-  font-size: 14px;
-  color: lightgrey;
-
-  &:hover {
-    color: slategray;
-  }
-
-  &::before {
-    content: '';
-    position: absolute;
-    right: 15px;
-    display: block;
-    background-color: lightgreen;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-  }
-}
+// .visually-hidden {
+//   border: 0;
+//   clip: rect(0 0 0 0);
+//   height: 1px;
+//   margin: -1px;
+//   overflow: hidden;
+//   padding: 0;
+//   position: absolute;
+//   width: 1px;
+// }
