--- a/src/stylesheets/abstract/variables.scss
+++ b/src/stylesheets/abstract/variables.scss
@@ -1,14 +1,14 @@
 $text-color: #181818;
-$text-color-accent: #0B64FE;
+$text-color-accent: #0b64fe;
 
-$bg: #FFFFFF;
-$bg-button: #A6FFFF;
+$bg: #ffffff;
+$bg-button: #a6ffff;
 
 $brand-color: tomato;
 
 $max-width: 100%;
 
-$basic-font: "Ubuntu";
+$basic-font: 'Ubuntu';
 
 $tablet-width: 768px;
 $desktop-width: 1200px;
