--- a/src/stylesheets/layout/grid.scss
+++ b/src/stylesheets/layout/grid.scss
@@ -1,5 +1,7 @@
 .page-body {
   font-family: $basic-font;
+  min-height: 100%;
+
 
   @media (min-width: $tablet-width) {
     min-width: 768px;
@@ -14,7 +16,7 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: min-content 1fr min-content;
+  grid-template-rows: min-content;
   align-content: start;
   height: 100%;
   overflow: hidden;
